--- a/sytle/style.css
+++ b/sytle/style.css
@@ -1,5 +1,5 @@
 body{
-    width: 400px;
+    width: 60%;
     margin: auto;
 }
 
@@ -7,21 +7,33 @@ body{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 3px;
+    
 }
 .elem {
     border: 1px solid black;
-    text-align:center;
     padding: 2px;
     font-size: 25px;
-
     aspect-ratio: 1;    /*egyenlo magas es szeles*/
-
-    /*
-        width: 100px;
-        height: 100px;
-        border: 1px solid black;
-        align-items: center;
-        justify-content: center;
-    */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+main {
+    display:grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 10px;
+}
+
+#sectUrlap {
+    margin-bottom: 50px;
+
+}
+h2 {
+    text-align:start;
+    margin-top: 0;
+}
+footer {
+    margin-top: 50px;
+    text-align: start;
+    display: grid;
+}   
